# qaguru_autotest_lesson_15

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py
tests/tests_homework/: test_fixtures.py  test_parametrize.py  test_skip.py
